remove the scroll logic when close local search result on mobile devices & add overlay and fixed local search result logic

--- a/themes/next/source/css/_colors.styl
+++ b/themes/next/source/css/_colors.styl
@@ -1,4 +1,6 @@
 :root {
+  --local-search-width: 60%;
+
   --header-bg-color: $header-bg-color;
   --tag-cloud-a-bg-color: $tag-cloud-a-bg-color;
   --tag-cloud-a-bg-hover-color: $tag-cloud-a-bg-hover-color;
